parser.output
Terminaux inutilisés dans la grammaire

    tERROR


Grammaire

    0 $accept: Program $end

    1 Program: Function tVOID tMAIN tLPAR tVOID tRPAR Body

    2 Function: tINT tID tLPAR ArgList tRPAR Body

    3 ArgList: ArgListNext
    4        | %empty

    5 ArgListNext: tINT tID ArgListNextNext
    6            | Arith_Expr ArgListNextNext

    7 ArgListNextNext: tCOMMA tINT tID ArgListNextNext
    8                | tCOMMA Arith_Expr ArgListNextNext
    9                | %empty

   10 Body: tLBRACE Content tRBRACE

   11 Content: Instruction Content
   12        | %empty

   13 Instruction: Constantes
   14            | Declaration
   15            | Affectation
   16            | LoopIF
   17            | LoopWHILE
   18            | Print
   19            | Return
   20            | tCOMMENT

   21 Constantes: tCONST Dec tSEMI

   22 Dec: tID tCOMMA DecNext
   23    | tID
   24    | tID tASSIGN Arith_Expr

   25 Declaration: tINT DecNext tSEMI

   26 DecNext: tID tCOMMA DecNext
   27        | tID
   28        | tID tASSIGN Arith_Expr
   29        | tID tASSIGN tID tLPAR ArgList tRPAR

   30 Affectation: tID tASSIGN Arith_Expr tSEMI

   31 LoopIF: tIF tLPAR Condition tRPAR Body IfNext

   32 IfNext: tELSE Body
   33       | %empty

   34 LoopWHILE: tWHILE tLPAR Condition tRPAR Body

   35 Arith_Expr: Factor
   36           | Arith_Expr tADD Factor
   37           | Arith_Expr tSUB Factor

   38 Factor: Term
   39       | Factor tMUL Term
   40       | Factor tDIV Term

   41 Term: tNB
   42     | tID
   43     | tLPAR Arith_Expr tRPAR

   44 Condition: Bool_Expr
   45          | Bool_Expr tAND Bool_Expr
   46          | Bool_Expr tNOT Bool_Expr
   47          | Bool_Expr tOR Bool_Expr

   48 Bool_Expr: tTRUE
   49          | tFALSE
   50          | Arith_Expr tLT Arith_Expr
   51          | Arith_Expr tGT Arith_Expr
   52          | Arith_Expr tGE Arith_Expr
   53          | Arith_Expr tLE Arith_Expr
   54          | Arith_Expr tNE Arith_Expr
   55          | Arith_Expr tEQ Arith_Expr

   56 Print: tPRINTF tLPAR Expr tRPAR tSEMI

   57 Return: tRETURN Expr tSEMI

   58 Expr: Arith_Expr
   59     | Bool_Expr


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tMAIN (258) 1
    tPRINTF (259) 56
    tRETURN (260) 57
    tIF (261) 31
    tELSE (262) 32
    tWHILE (263) 34
    tVOID (264) 1
    tTRUE (265) 48
    tFALSE (266) 49
    tLPAR (267) 1 2 29 31 34 43 56
    tRPAR (268) 1 2 29 31 34 43 56
    tLBRACE (269) 10
    tRBRACE (270) 10
    tCONST (271) 21
    tINT (272) 2 5 7 25
    tCOMMA (273) 7 8 22 26
    tSEMI (274) 21 25 30 56 57
    tADD (275) 36
    tSUB (276) 37
    tMUL (277) 39
    tDIV (278) 40
    tEQ (279) 55
    tLT (280) 50
    tGT (281) 51
    tNE (282) 54
    tAND (283) 45
    tOR (284) 47
    tGE (285) 52
    tLE (286) 53
    tASSIGN (287) 24 28 29 30
    tNOT (288) 46
    tCOMMENT (289) 20
    tERROR (290)
    tNB <nb> (291) 41
    tID <str> (292) 2 5 7 22 23 24 26 27 28 29 30 42


Non-terminaux, suivis des règles où ils apparaissent

    $accept (38)
        à gauche: 0
    Program (39)
        à gauche: 1
        à droite: 0
    Function (40)
        à gauche: 2
        à droite: 1
    ArgList (41)
        à gauche: 3 4
        à droite: 2 29
    ArgListNext (42)
        à gauche: 5 6
        à droite: 3
    ArgListNextNext (43)
        à gauche: 7 8 9
        à droite: 5 6 7 8
    Body (44)
        à gauche: 10
        à droite: 1 2 31 32 34
    Content (45)
        à gauche: 11 12
        à droite: 10 11
    Instruction (46)
        à gauche: 13 14 15 16 17 18 19 20
        à droite: 11
    Constantes (47)
        à gauche: 21
        à droite: 13
    Dec (48)
        à gauche: 22 23 24
        à droite: 21
    Declaration (49)
        à gauche: 25
        à droite: 14
    DecNext (50)
        à gauche: 26 27 28 29
        à droite: 22 25 26
    Affectation (51)
        à gauche: 30
        à droite: 15
    LoopIF (52)
        à gauche: 31
        à droite: 16
    IfNext (53)
        à gauche: 32 33
        à droite: 31
    LoopWHILE (54)
        à gauche: 34
        à droite: 17
    Arith_Expr (55)
        à gauche: 35 36 37
        à droite: 6 8 24 28 30 36 37 43 50 51 52 53 54 55 58
    Factor (56)
        à gauche: 38 39 40
        à droite: 35 36 37 39 40
    Term (57)
        à gauche: 41 42 43
        à droite: 38 39 40
    Condition (58)
        à gauche: 44 45 46 47
        à droite: 31 34
    Bool_Expr (59)
        à gauche: 48 49 50 51 52 53 54 55
        à droite: 44 45 46 47 59
    Print (60)
        à gauche: 56
        à droite: 18
    Return (61)
        à gauche: 57
        à droite: 19
    Expr (62)
        à gauche: 58 59
        à droite: 56 57


État 0

    0 $accept: . Program $end

    tINT  décalage et aller à l'état 1

    Program   aller à l'état 2
    Function  aller à l'état 3


État 1

    2 Function: tINT . tID tLPAR ArgList tRPAR Body

    tID  décalage et aller à l'état 4


État 2

    0 $accept: Program . $end

    $end  décalage et aller à l'état 5


État 3

    1 Program: Function . tVOID tMAIN tLPAR tVOID tRPAR Body

    tVOID  décalage et aller à l'état 6


État 4

    2 Function: tINT tID . tLPAR ArgList tRPAR Body

    tLPAR  décalage et aller à l'état 7


État 5

    0 $accept: Program $end .

    $défaut  accepter


État 6

    1 Program: Function tVOID . tMAIN tLPAR tVOID tRPAR Body

    tMAIN  décalage et aller à l'état 8


État 7

    2 Function: tINT tID tLPAR . ArgList tRPAR Body

    tLPAR  décalage et aller à l'état 9
    tINT   décalage et aller à l'état 10
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 4 (ArgList)

    ArgList      aller à l'état 13
    ArgListNext  aller à l'état 14
    Arith_Expr   aller à l'état 15
    Factor       aller à l'état 16
    Term         aller à l'état 17


État 8

    1 Program: Function tVOID tMAIN . tLPAR tVOID tRPAR Body

    tLPAR  décalage et aller à l'état 18


État 9

   43 Term: tLPAR . Arith_Expr tRPAR

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Arith_Expr  aller à l'état 19
    Factor      aller à l'état 16
    Term        aller à l'état 17


État 10

    5 ArgListNext: tINT . tID ArgListNextNext

    tID  décalage et aller à l'état 20


État 11

   41 Term: tNB .

    $défaut  réduction par utilisation de la règle 41 (Term)


État 12

   42 Term: tID .

    $défaut  réduction par utilisation de la règle 42 (Term)


État 13

    2 Function: tINT tID tLPAR ArgList . tRPAR Body

    tRPAR  décalage et aller à l'état 21


État 14

    3 ArgList: ArgListNext .

    $défaut  réduction par utilisation de la règle 3 (ArgList)


État 15

    6 ArgListNext: Arith_Expr . ArgListNextNext
   36 Arith_Expr: Arith_Expr . tADD Factor
   37           | Arith_Expr . tSUB Factor

    tCOMMA  décalage et aller à l'état 22
    tADD    décalage et aller à l'état 23
    tSUB    décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 9 (ArgListNextNext)

    ArgListNextNext  aller à l'état 25


État 16

   35 Arith_Expr: Factor .
   39 Factor: Factor . tMUL Term
   40       | Factor . tDIV Term

    tMUL  décalage et aller à l'état 26
    tDIV  décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 35 (Arith_Expr)


État 17

   38 Factor: Term .

    $défaut  réduction par utilisation de la règle 38 (Factor)


État 18

    1 Program: Function tVOID tMAIN tLPAR . tVOID tRPAR Body

    tVOID  décalage et aller à l'état 28


État 19

   36 Arith_Expr: Arith_Expr . tADD Factor
   37           | Arith_Expr . tSUB Factor
   43 Term: tLPAR Arith_Expr . tRPAR

    tRPAR  décalage et aller à l'état 29
    tADD   décalage et aller à l'état 23
    tSUB   décalage et aller à l'état 24


État 20

    5 ArgListNext: tINT tID . ArgListNextNext

    tCOMMA  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 9 (ArgListNextNext)

    ArgListNextNext  aller à l'état 30


État 21

    2 Function: tINT tID tLPAR ArgList tRPAR . Body

    tLBRACE  décalage et aller à l'état 31

    Body  aller à l'état 32


État 22

    7 ArgListNextNext: tCOMMA . tINT tID ArgListNextNext
    8                | tCOMMA . Arith_Expr ArgListNextNext

    tLPAR  décalage et aller à l'état 9
    tINT   décalage et aller à l'état 33
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Arith_Expr  aller à l'état 34
    Factor      aller à l'état 16
    Term        aller à l'état 17


État 23

   36 Arith_Expr: Arith_Expr tADD . Factor

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Factor  aller à l'état 35
    Term    aller à l'état 17


État 24

   37 Arith_Expr: Arith_Expr tSUB . Factor

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Factor  aller à l'état 36
    Term    aller à l'état 17


État 25

    6 ArgListNext: Arith_Expr ArgListNextNext .

    $défaut  réduction par utilisation de la règle 6 (ArgListNext)


État 26

   39 Factor: Factor tMUL . Term

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Term  aller à l'état 37


État 27

   40 Factor: Factor tDIV . Term

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Term  aller à l'état 38


État 28

    1 Program: Function tVOID tMAIN tLPAR tVOID . tRPAR Body

    tRPAR  décalage et aller à l'état 39


État 29

   43 Term: tLPAR Arith_Expr tRPAR .

    $défaut  réduction par utilisation de la règle 43 (Term)


État 30

    5 ArgListNext: tINT tID ArgListNextNext .

    $défaut  réduction par utilisation de la règle 5 (ArgListNext)


État 31

   10 Body: tLBRACE . Content tRBRACE

    tPRINTF   décalage et aller à l'état 40
    tRETURN   décalage et aller à l'état 41
    tIF       décalage et aller à l'état 42
    tWHILE    décalage et aller à l'état 43
    tCONST    décalage et aller à l'état 44
    tINT      décalage et aller à l'état 45
    tCOMMENT  décalage et aller à l'état 46
    tID       décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 12 (Content)

    Content      aller à l'état 48
    Instruction  aller à l'état 49
    Constantes   aller à l'état 50
    Declaration  aller à l'état 51
    Affectation  aller à l'état 52
    LoopIF       aller à l'état 53
    LoopWHILE    aller à l'état 54
    Print        aller à l'état 55
    Return       aller à l'état 56


État 32

    2 Function: tINT tID tLPAR ArgList tRPAR Body .

    $défaut  réduction par utilisation de la règle 2 (Function)


État 33

    7 ArgListNextNext: tCOMMA tINT . tID ArgListNextNext

    tID  décalage et aller à l'état 57


État 34

    8 ArgListNextNext: tCOMMA Arith_Expr . ArgListNextNext
   36 Arith_Expr: Arith_Expr . tADD Factor
   37           | Arith_Expr . tSUB Factor

    tCOMMA  décalage et aller à l'état 22
    tADD    décalage et aller à l'état 23
    tSUB    décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 9 (ArgListNextNext)

    ArgListNextNext  aller à l'état 58


État 35

   36 Arith_Expr: Arith_Expr tADD Factor .
   39 Factor: Factor . tMUL Term
   40       | Factor . tDIV Term

    tMUL  décalage et aller à l'état 26
    tDIV  décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 36 (Arith_Expr)


État 36

   37 Arith_Expr: Arith_Expr tSUB Factor .
   39 Factor: Factor . tMUL Term
   40       | Factor . tDIV Term

    tMUL  décalage et aller à l'état 26
    tDIV  décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 37 (Arith_Expr)


État 37

   39 Factor: Factor tMUL Term .

    $défaut  réduction par utilisation de la règle 39 (Factor)


État 38

   40 Factor: Factor tDIV Term .

    $défaut  réduction par utilisation de la règle 40 (Factor)


État 39

    1 Program: Function tVOID tMAIN tLPAR tVOID tRPAR . Body

    tLBRACE  décalage et aller à l'état 31

    Body  aller à l'état 59


État 40

   56 Print: tPRINTF . tLPAR Expr tRPAR tSEMI

    tLPAR  décalage et aller à l'état 60


État 41

   57 Return: tRETURN . Expr tSEMI

    tTRUE   décalage et aller à l'état 61
    tFALSE  décalage et aller à l'état 62
    tLPAR   décalage et aller à l'état 9
    tNB     décalage et aller à l'état 11
    tID     décalage et aller à l'état 12

    Arith_Expr  aller à l'état 63
    Factor      aller à l'état 16
    Term        aller à l'état 17
    Bool_Expr   aller à l'état 64
    Expr        aller à l'état 65


État 42

   31 LoopIF: tIF . tLPAR Condition tRPAR Body IfNext

    tLPAR  décalage et aller à l'état 66


État 43

   34 LoopWHILE: tWHILE . tLPAR Condition tRPAR Body

    tLPAR  décalage et aller à l'état 67


État 44

   21 Constantes: tCONST . Dec tSEMI

    tID  décalage et aller à l'état 68

    Dec  aller à l'état 69


État 45

   25 Declaration: tINT . DecNext tSEMI

    tID  décalage et aller à l'état 70

    DecNext  aller à l'état 71


État 46

   20 Instruction: tCOMMENT .

    $défaut  réduction par utilisation de la règle 20 (Instruction)


État 47

   30 Affectation: tID . tASSIGN Arith_Expr tSEMI

    tASSIGN  décalage et aller à l'état 72


État 48

   10 Body: tLBRACE Content . tRBRACE

    tRBRACE  décalage et aller à l'état 73


État 49

   11 Content: Instruction . Content

    tPRINTF   décalage et aller à l'état 40
    tRETURN   décalage et aller à l'état 41
    tIF       décalage et aller à l'état 42
    tWHILE    décalage et aller à l'état 43
    tCONST    décalage et aller à l'état 44
    tINT      décalage et aller à l'état 45
    tCOMMENT  décalage et aller à l'état 46
    tID       décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 12 (Content)

    Content      aller à l'état 74
    Instruction  aller à l'état 49
    Constantes   aller à l'état 50
    Declaration  aller à l'état 51
    Affectation  aller à l'état 52
    LoopIF       aller à l'état 53
    LoopWHILE    aller à l'état 54
    Print        aller à l'état 55
    Return       aller à l'état 56


État 50

   13 Instruction: Constantes .

    $défaut  réduction par utilisation de la règle 13 (Instruction)


État 51

   14 Instruction: Declaration .

    $défaut  réduction par utilisation de la règle 14 (Instruction)


État 52

   15 Instruction: Affectation .

    $défaut  réduction par utilisation de la règle 15 (Instruction)


État 53

   16 Instruction: LoopIF .

    $défaut  réduction par utilisation de la règle 16 (Instruction)


État 54

   17 Instruction: LoopWHILE .

    $défaut  réduction par utilisation de la règle 17 (Instruction)


État 55

   18 Instruction: Print .

    $défaut  réduction par utilisation de la règle 18 (Instruction)


État 56

   19 Instruction: Return .

    $défaut  réduction par utilisation de la règle 19 (Instruction)


État 57

    7 ArgListNextNext: tCOMMA tINT tID . ArgListNextNext

    tCOMMA  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 9 (ArgListNextNext)

    ArgListNextNext  aller à l'état 75


État 58

    8 ArgListNextNext: tCOMMA Arith_Expr ArgListNextNext .

    $défaut  réduction par utilisation de la règle 8 (ArgListNextNext)


État 59

    1 Program: Function tVOID tMAIN tLPAR tVOID tRPAR Body .

    $défaut  réduction par utilisation de la règle 1 (Program)


État 60

   56 Print: tPRINTF tLPAR . Expr tRPAR tSEMI

    tTRUE   décalage et aller à l'état 61
    tFALSE  décalage et aller à l'état 62
    tLPAR   décalage et aller à l'état 9
    tNB     décalage et aller à l'état 11
    tID     décalage et aller à l'état 12

    Arith_Expr  aller à l'état 63
    Factor      aller à l'état 16
    Term        aller à l'état 17
    Bool_Expr   aller à l'état 64
    Expr        aller à l'état 76


État 61

   48 Bool_Expr: tTRUE .

    $défaut  réduction par utilisation de la règle 48 (Bool_Expr)


État 62

   49 Bool_Expr: tFALSE .

    $défaut  réduction par utilisation de la règle 49 (Bool_Expr)


État 63

   36 Arith_Expr: Arith_Expr . tADD Factor
   37           | Arith_Expr . tSUB Factor
   50 Bool_Expr: Arith_Expr . tLT Arith_Expr
   51          | Arith_Expr . tGT Arith_Expr
   52          | Arith_Expr . tGE Arith_Expr
   53          | Arith_Expr . tLE Arith_Expr
   54          | Arith_Expr . tNE Arith_Expr
   55          | Arith_Expr . tEQ Arith_Expr
   58 Expr: Arith_Expr .

    tADD  décalage et aller à l'état 23
    tSUB  décalage et aller à l'état 24
    tEQ   décalage et aller à l'état 77
    tLT   décalage et aller à l'état 78
    tGT   décalage et aller à l'état 79
    tNE   décalage et aller à l'état 80
    tGE   décalage et aller à l'état 81
    tLE   décalage et aller à l'état 82

    $défaut  réduction par utilisation de la règle 58 (Expr)


État 64

   59 Expr: Bool_Expr .

    $défaut  réduction par utilisation de la règle 59 (Expr)


État 65

   57 Return: tRETURN Expr . tSEMI

    tSEMI  décalage et aller à l'état 83


État 66

   31 LoopIF: tIF tLPAR . Condition tRPAR Body IfNext

    tTRUE   décalage et aller à l'état 61
    tFALSE  décalage et aller à l'état 62
    tLPAR   décalage et aller à l'état 9
    tNB     décalage et aller à l'état 11
    tID     décalage et aller à l'état 12

    Arith_Expr  aller à l'état 84
    Factor      aller à l'état 16
    Term        aller à l'état 17
    Condition   aller à l'état 85
    Bool_Expr   aller à l'état 86


État 67

   34 LoopWHILE: tWHILE tLPAR . Condition tRPAR Body

    tTRUE   décalage et aller à l'état 61
    tFALSE  décalage et aller à l'état 62
    tLPAR   décalage et aller à l'état 9
    tNB     décalage et aller à l'état 11
    tID     décalage et aller à l'état 12

    Arith_Expr  aller à l'état 84
    Factor      aller à l'état 16
    Term        aller à l'état 17
    Condition   aller à l'état 87
    Bool_Expr   aller à l'état 86


État 68

   22 Dec: tID . tCOMMA DecNext
   23    | tID .
   24    | tID . tASSIGN Arith_Expr

    tCOMMA   décalage et aller à l'état 88
    tASSIGN  décalage et aller à l'état 89

    $défaut  réduction par utilisation de la règle 23 (Dec)


État 69

   21 Constantes: tCONST Dec . tSEMI

    tSEMI  décalage et aller à l'état 90


État 70

   26 DecNext: tID . tCOMMA DecNext
   27        | tID .
   28        | tID . tASSIGN Arith_Expr
   29        | tID . tASSIGN tID tLPAR ArgList tRPAR

    tCOMMA   décalage et aller à l'état 91
    tASSIGN  décalage et aller à l'état 92

    $défaut  réduction par utilisation de la règle 27 (DecNext)


État 71

   25 Declaration: tINT DecNext . tSEMI

    tSEMI  décalage et aller à l'état 93


État 72

   30 Affectation: tID tASSIGN . Arith_Expr tSEMI

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Arith_Expr  aller à l'état 94
    Factor      aller à l'état 16
    Term        aller à l'état 17


État 73

   10 Body: tLBRACE Content tRBRACE .

    $défaut  réduction par utilisation de la règle 10 (Body)


État 74

   11 Content: Instruction Content .

    $défaut  réduction par utilisation de la règle 11 (Content)


État 75

    7 ArgListNextNext: tCOMMA tINT tID ArgListNextNext .

    $défaut  réduction par utilisation de la règle 7 (ArgListNextNext)


État 76

   56 Print: tPRINTF tLPAR Expr . tRPAR tSEMI

    tRPAR  décalage et aller à l'état 95


État 77

   55 Bool_Expr: Arith_Expr tEQ . Arith_Expr

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Arith_Expr  aller à l'état 96
    Factor      aller à l'état 16
    Term        aller à l'état 17


État 78

   50 Bool_Expr: Arith_Expr tLT . Arith_Expr

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Arith_Expr  aller à l'état 97
    Factor      aller à l'état 16
    Term        aller à l'état 17


État 79

   51 Bool_Expr: Arith_Expr tGT . Arith_Expr

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Arith_Expr  aller à l'état 98
    Factor      aller à l'état 16
    Term        aller à l'état 17


État 80

   54 Bool_Expr: Arith_Expr tNE . Arith_Expr

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Arith_Expr  aller à l'état 99
    Factor      aller à l'état 16
    Term        aller à l'état 17


État 81

   52 Bool_Expr: Arith_Expr tGE . Arith_Expr

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Arith_Expr  aller à l'état 100
    Factor      aller à l'état 16
    Term        aller à l'état 17


État 82

   53 Bool_Expr: Arith_Expr tLE . Arith_Expr

    tLPAR  décalage et aller à l'état 9
    tNB    décalage et aller à l'état 11
    tID    décalage et aller à l'état 12

    Arith_Expr  aller à l'état 101
    Factor      aller à l'état 16
    Term        aller à l'état 17


État 83

   57 Return: tRETURN Expr tSEMI .

    $défaut  réduction par utilisation de la règle 57 (Return)


État 84

   36 Arith_Expr: Arith_Expr . tADD Factor
   37           | Arith_Expr . tSUB Factor
   50 Bool_Expr: Arith_Expr . tLT Arith_Expr
   51          | Arith_Expr . tGT Arith_Expr
   52          | Arith_Expr . tGE Arith_Expr
   53          | Arith_Expr . tLE Arith_Expr
   54          | Arith_Expr . tNE Arith_Expr
   55          | Arith_Expr . tEQ Arith_Expr

    tADD  décalage et aller à l'état 23
    tSUB  décalage et aller à l'état 24
    tEQ   décalage et aller à l'état 77
    tLT   décalage et aller à l'état 78
    tGT   décalage et aller à l'état 79
    tNE   décalage et aller à l'état 80
    tGE   décalage et aller à l'état 81
    tLE   décalage et aller à l'état 82


État 85

   31 LoopIF: tIF tLPAR Condition . tRPAR Body IfNext

    tRPAR  décalage et aller à l'état 102


État 86

   44 Condition: Bool_Expr .
   45          | Bool_Expr . tAND Bool_Expr
   46          | Bool_Expr . tNOT Bool_Expr
   47          | Bool_Expr . tOR Bool_Expr

    tAND  décalage et aller à l'état 103
    tOR   décalage et aller à l'état 104
    tNOT  décalage et aller à l'état 105

    $défaut  réduction par utilisation de la règle 44 (Condition)


État 87

   34 LoopWHILE: tWHILE tLPAR Condition . tRPAR Body

    tRPAR  décalage et aller à l'état 106


État 88

   22 Dec: tID tCOMMA . DecNext

    tID  décalage et aller à l'état 70

    DecNext  aller à l'état 107


État 89

   24 Dec: tID tASSIGN . Arith_Expr
